<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_lyrics" android:title="@string/menu_show_lyrics"
        android:orderInCategory="101" app:showAsAction="never" />

    <item android:id="@+id/action_shuffle" android:title="@string/action_shuffle_all"
        android:orderInCategory="10" app:showAsAction="never" />

    <item android:id="@+id/action_equalizer" android:title="@string/action_equalizer"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="101" app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="always"
        android:title="@string/search"/>

</menu>