<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_new_playlist"
        android:orderInCategory="9"
        android:title="@string/new_playlist"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_auto_playlists"
        android:orderInCategory="9"
        android:title="Hide auto playlists"
        app:showAsAction="never" />

    <item
            android:id="@+id/menu_show_as"
            android:orderInCategory="40"
            android:title="@string/menu_show_as"
            app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_show_as_list"
                android:title="@string/menu_show_as_entry_list"/>
            <item
                android:id="@+id/menu_show_as_grid"
                android:title="@string/menu_show_as_entry_grid"/>
            <item
                android:id="@+id/menu_show_as_default"
                android:title="@string/menu_show_as_entry_default"/>
        </menu>
    </item>

</menu>