<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.percentlayout.widget.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/headerView"
            android:layout_width="match_parent"
            app:layout_heightPercent="55%">

            <ImageView
                android:id="@+id/album_art"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#66000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/song_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="#ffffff"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/song_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingTop="3dp"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />

                <SeekBar
                    android:id="@+id/song_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:maxHeight="2dp"
                    android:paddingTop="18dp"
                    android:progress="30"
                    android:tag="tint_accent_color" />


                <TextView
                    android:id="@+id/song_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/song_elapsed_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:paddingLeft="25dp"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/song_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingRight="25dp"
                        android:textColor="#ffffff" />

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:id="@+id/previous"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_weight="0.7"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:paddingLeft="50dp"
                        android:scaleType="center"
                        app:materialIcon="skip_previous"
                        app:materialIconColor="#fff"
                        app:materialIconSize="35dp" />

                    <FrameLayout
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1">

                        <com.naman14.timber.widgets.PlayPauseButton
                            android:id="@+id/playpause"
                            android:layout_width="23dp"
                            android:layout_height="23dp"
                            android:layout_gravity="center" />

                        <View
                            android:id="@+id/playpausewrapper"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackgroundBorderless" />

                    </FrameLayout>

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:id="@+id/next"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_weight="0.7"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:paddingRight="50dp"
                        android:scaleType="center"
                        app:materialIcon="skip_next"
                        app:materialIconColor="#fff"
                        app:materialIconSize="35dp" />
                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                android:layout_marginTop="@dimen/appBarTopMargin"
                android:background="@android:color/transparent"
                android:theme="@style/Theme.AppCompat"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </FrameLayout>


        <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/queue_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/headerView"
            android:clipToPadding="false"
            android:paddingTop="18dp" />

    </androidx.percentlayout.widget.PercentRelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:scaleType="centerInside"
        android:tag="bg_tint_accent_color"
        app:layout_anchor="@id/headerView"
        app:layout_anchorGravity="bottom|right|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>