<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/popup_song_play"
        android:title="@string/play" />
    <item
        android:id="@+id/popup_song_remove_queue"
        android:title="@string/remove_from_queue"
        />

    <item
        android:id="@+id/popup_song_addto_playlist"
        android:title="@string/add_to_playlist" />

    <item
        android:id="@+id/popup_song_goto_album"
        android:title="@string/go_to_album" />

    <item
        android:id="@+id/popup_song_goto_artist"
        android:title="@string/go_to_artist" />
</menu>