<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"

            android:title="@string/library" />
        <item
            android:id="@+id/nav_playlists"

            android:title="@string/playlists" />
        <item
            android:id="@+id/nav_folders"

            android:title="@string/folders" />
        <item
            android:id="@+id/nav_queue"

            android:title="@string/playing_queue" />
        <item
            android:id="@+id/nav_nowplaying"
            android:checkable="false"
            android:title="@string/now_playing" />

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">
        <item

            android:id="@+id/nav_settings"
            android:title="@string/settings" />

        <item

            android:id="@+id/nav_about"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_donate"
            android:title="Support development" />

    </group>

</menu>
