<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/popup_song_remove_playlist"
        android:title="Remove from playlist"
        android:visible="false"/>

    <item
        android:id="@+id/popup_song_play"
        android:title="@string/play" />

    <item
        android:id="@+id/popup_song_play_next"
        android:title="@string/play_next" />

    <item
        android:id="@+id/popup_song_addto_queue"
        android:title="@string/add_to_queue" />

    <item
        android:id="@+id/popup_song_addto_playlist"
        android:title="@string/add_to_playlist" />

    <item
        android:id="@+id/popup_song_goto_album"
        android:title="@string/go_to_album" />

    <item
        android:id="@+id/popup_song_goto_artist"
    android:title="@string/go_to_artist" />

    <item
        android:id="@+id/popup_song_share"
        android:title="@string/share" />

    <item
        android:id="@+id/popup_song_delete"
        android:title="@string/delete_from_device" />

</menu>