<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topContainer"
    android:layout_width="wrap_content"
    android:layout_height="55dp"
    android:layout_gravity="top"
    android:background="?attr/windowBackground">

    <com.naman14.timber.widgets.SquareImageView
...
        android:layout_alignParentLeft="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_empty_music2" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/album_art_nowplayingcard"
        android:orientation="vertical">

        <ProgressBar
...
