...
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackgroundBorderless" />

                </FrameLayout>

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/next"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_weight="0.7"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:paddingRight="50dp"
                    android:scaleType="center"
...
